# chronos-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  wasm-test.sh
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_14098baa4ffe1E0vbU4E5kS3x6.json
benches/: ecs_benchmark.rs
packaging/appimage/: build-appimage.sh  chronos-editor.desktop
packaging/arch/: PKGBUILD
packaging/macos/: build-dmg.sh
packaging/windows/: build-installer.ps1
src/: animation.rs  asset.rs  audio.rs  component.rs  editor.rs  editor_app.rs  entity.rs  error.rs  fog_of_war.rs  font.rs  general_systems.rs  input.rs  lib.rs  lighting.rs  main.rs  material.rs  obj_loader.rs  octree.rs  particle.rs  physics2d.rs  physics3d.rs  postprocess.rs  profiler.rs  render.rs  render.wgsl  render3d.rs  scene.rs  shader.rs  skeletal.rs  spatial.rs  storage.rs  system.rs  texture.rs  tilemap.rs  ui.rs  web.rs  world.rs
src/demo/: mod.rs
src/editor_panels/: asset_browser.rs  console.rs  hierarchy.rs  inspector.rs  menu_bar.rs  mod.rs  toolbar.rs  viewport.rs  welcome.rs
src/editor_project/: mod.rs  project.rs
src/editor_workspace/: docking.rs  gizmo.rs  grid.rs  mod.rs  selection.rs  settings.rs  shortcuts.rs  undo.rs
src/game/: ability.rs  ai.rs  ambience.rs  camera.rs  combat.rs  components.rs  daynight.rs  dialogue.rs  effects.rs  encounters.rs  equipment.rs  factions.rs  hud.rs  inventory_ui.rs  jobs.rs  loot.rs  mercenary.rs  minimap.rs  mod.rs  navigation.rs  plugin.rs  poi.rs  runner.rs  save.rs  screens.rs  selection.rs  squad.rs  stats.rs  terrain.rs  tutorial.rs  world_map.rs
src/import/: audio_import.rs  font_import.rs  gltf_import.rs  hotreload.rs  image_import.rs  metadata.rs  mod.rs  processor.rs  registry.rs  thumbnail.rs
src/net/: entity_sync.rs  lag_compensation.rs  lobby.rs  lockstep.rs  mod.rs  rollback.rs  transport.rs  voice_chat.rs
src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs  wasm.rs  windows.rs
src/plugin/: api.rs  editor.rs  mod.rs
src/scripting/: api.rs  bridge.rs  component.rs  hotreload.rs  lifecycle.rs  mod.rs  modloader.rs
tests/: integration_tests.rs
www/: index.html
