[package]
name = "chronos-engine"
version = "0.3.0"
edition = "2021"
description = "A custom ECS game engine with deterministic simulation"

[dependencies]

[features]
default = []
render = ["wgpu", "winit", "bytemuck", "rand", "tokio", "image"]
serialize = ["serde", "serde_json"]
audio = ["rodio"]
dev-tools = ["notify", "serde", "serde_json"]
game = ["render"]
asset-pipeline = ["gltf", "symphonia", "ab_glyph", "uuid", "serde", "serde_json", "image"]
full = ["render", "serialize", "audio", "dev-tools", "game", "editor", "scripting", "asset-pipeline"]

editor = ["egui", "egui-wgpu", "egui-winit", "wgpu", "winit", "pollster", "serde", "serde_json"]

scripting = ["rhai"]

[dependencies.wgpu]
version = "23"
optional = true

[dependencies.winit]
version = "0.30"
optional = true

[dependencies.bytemuck]
version = "1"
optional = true
features = ["derive"]

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["rt", "rt-multi-thread"]

[dependencies.image]
version = "0.25"
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.rodio]
version = "0.20"
optional = true

[dependencies.notify]
version = "7"
optional = true

[dependencies.egui]
version = "0.30"
optional = true

[dependencies.egui-wgpu]
version = "0.30"
optional = true
features = ["winit"]

[dependencies.egui-winit]
version = "0.30"
optional = true

[dependencies.pollster]
version = "0.4"
optional = true

[dependencies.rhai]
version = "1"
optional = true

[dependencies.gltf]
version = "1"
optional = true
features = ["import", "names"]

[dependencies.symphonia]
version = "0.5"
optional = true
features = ["pcm", "wav", "ogg", "mp3", "flac"]

[dependencies.ab_glyph]
version = "0.2"
optional = true

[dependencies.uuid]
version = "1"
optional = true
features = ["v4"]

[[bin]]
name = "chronos-editor"
path = "src/bin/chronos-editor.rs"
required-features = ["editor"]
